2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b19

	* Moved checkVersions() to util.php, and fixed a logical bug in it.  
	  Also added some improvements to it's behaviour from HEAD.

2003-11-19 Jens Tkotz <jens@peino.de> 1.4.1-RC4-cvs-b18

	* Bugfix: Change Parameter for check imagemagick to -version.

2003-11-18 Jens Tkotz <jens@peino.de> 1.4.1-RC4-cvs-b17

	* Bugfix: In Windows in some diagnostic files fs_win32.php 
		  was called twice.

	* Bugfix: Disabled one little translation, because at that time _()
		  is undefined when PHP has no gettext. To really fix this a
		  bigger change were needed.


2003-11-17  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b16

	* Fixed CSS file so text is readable with bluemod skin.

2003-11-17  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b15

	* Increase the warnings on vote initialization to try to stop 
	  people turning voting on in all albums by mistake.

2003-11-17 Jens Tkotz <jens@peino.de> 1.4.1-RC4-cvs-b14

	* Bugfix: Changed check in confirm.inc to 
	  catch empty fields which are new.

2003-11-17  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b13

	* Fixed bug where focus on new password page was an uneditable field.

2003-11-17  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b12

	* Added message if you run backup_albums.php from setup directory.

2003-11-15  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b11

        * Removed error message so skins/ can be removed without problems.

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b10
	
	* Added backwards compatibility for user customized thumbnail frames.

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b9

	* w3.org links only if devMode="yes"

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b8

	* Moved email.log to .users directory.
