@@ -1,3 +1,12 @@
+2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b20
+
+	* Added check_versions to gallery check page, to check that gallery
+	  is up-to-date before running.
+
+	* Modified checkVersions to return ($success, $fail, $warn)
+
+	* Fixed potential warning in setup/check.inc.
+
 2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b19
 
 	* Moved checkVersions() to util.php, and fixed a logical bug in it.  
